examples/errors/unknown_placeholder.aaa
fn
    foo
return
    *a
{
    nop
}


fn
    main
{
    nop
}
